# advent-of-code

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
2023/: day1.py  day2.py  helpers.py
adventofcode/: __init__.py  day1.py  day2.py  day3.py  day4.py  helpers.py  runner.py
docs/: adventofcode.html  index.html  search.js
docs/adventofcode/: day1.html  day2.html  day3.html  helpers.html  runner.html
