[tool.poetry]
name = "adventofcode"
version = "0.1.0"
description = ""
authors = ["Manuel Lang <manuellang183@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
rich = "^13.7.0"
click = "^8.1.7"
pdoc = "^14.1.0"

[tool.poetry.scripts]
aoc = "adventofcode.runner:run_script"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
